# futudiffu

./: .gitignore  .mcp.json  CLAUDE.md  MEMORANDUM.md  PLAN_perf_phase2.md  bench_op_profile.py  bootstrap.py  diagnose_i2i.py  diff_renders.py  generate_policy_eval.py  paths4claude.md  pyproject.toml  readme.md  remote_target.json.example  render_policy_comparison.py  run_compat_validation.py  smoke_test_btrm_policy.py  smoke_test_btrm_v2.py  sourcemap.md  test_flexattn_integration.py  test_lifecycle_and_dump.py  test_multilora_fused.py
.claude/: settings.local.json
batch_rollout_validation/: metrics.json
bench/: README.md  bench_attention.py  bench_batch_scaling.py  bench_btrm.py  bench_compile_fp8.py  bench_compile_guard_storm.py  bench_fp8_gemm.py  bench_fusion.py  bench_sage_pv.py  bench_warmup_flow.py  benchmark_sage_variants.py
btrm_data/: rtheta_weights.pt
btrm_dataset/: README.md  manifest.json
btrm_dataset_v2_heattest/: index.parquet
docs/: architecture_review.md  audit_remote_bootstrap.md  audit_remote_infrastructure_rollup.md  audit_remote_process_supervision.md  audit_remote_run_postmortem.md  audit_remote_ssh_resilience.md  audit_remote_tmux_sessions.md  btrm_ops_notes.md  btrm_rl_architecture_review.md  case_study_2xh100_20260216.md  claude_BTRM_training_policy.md  claude_testing_discipline.md  dataset_v2_spec.md  directive_btrm_reward_function_integration.md  directive_remove_logsquare_regularizer.md  directive_unit4_pinkify_thisnotthat.md  directive_unit4b_attention_interpretability.md  e2e_training_test_plan.md  essay_adapter_attention_diffs.md  essay_algorithmic_decomposition.md  essay_attention_dispatch_and_forward_packed.md  essay_attention_renders.md  essay_audit_fake_porting.md  essay_bin_packing_text_aware.md  essay_btrm_compound_and_extraction.md  essay_canonicalization_rendering_and_stats.md  essay_codebase_analysis.md  essay_continuous_resolution_sampling.md  (+110 more)
(+1362 files in other folders)
