[project]
name = "futudiffu"
version = "0.1.0"
description = "Exact float-for-float ComfyUI workflow replication"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "safetensors",
    "transformers",
    "einops",
    "numpy",
    "pillow",
    "pyzmq>=25.0",
    "pyarrow>=14.0",
    "tzdata",
    "huggingface_hub",
]

[project.optional-dependencies]
triton-linux = ["triton>=3.0"]
triton-windows = ["triton-windows>=3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/futudiffu"]

[project.scripts]
futudiffu = "futudiffu.generate:main"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
