[project]
name = "futudiffu"
version = "0.1.0"
description = "Exact float-for-float ComfyUI workflow replication"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "safetensors",
    "transformers",
    "einops",
    "numpy",
    "pillow",
    # pyzmq removed: ZMQ is dead architecture (2026-02-17). Use FastAPI server.
    "pyarrow>=14.0",
    "tzdata",
    "huggingface_hub",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
triton-linux = ["triton>=3.0"]
triton-windows = ["triton-windows>=3.0"]
dev = ["pytest>=8.0", "starlette[full]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/futudiffu"]

[project.scripts]
futudiffu = "futudiffu.generate:main"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
